@@ -5,6 +5,8 @@ syslog-ng (3.3.1-1~mhp2) unstable; urgency=low
   * Support 'status' in the init script.
     Patch from Peter Eisentraut <petere@debian.org> (Closes: #644458)
   * Build-Depend on libevtlog-dev (>= 0.2.12-5~) for correct shlibs.
+  * Build-Depend on lsb-release, and use it to disable xz compression on
+    Ubuntu Lucid.
 
  --
 
